--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "git-batch-clone",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "This is a cmd tool, that helps you to clone and config multiple git repos into a specified folder structure.",
   "main": "dist/gitbatch.js",
   "bin": {
@@ -35,19 +35,18 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "deep-assign": "^2.0.0",
-    "promise": "^7.1.1"
+    "fs-extra": "^1.0.0",
+    "promise": "^7.1.1",
+    "promisify-node": "^0.4.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
     "del": "^2.2.2",
-    "fs-extra": "^1.0.0",
-    "fs-promise": "^0.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-load-plugins": "^1.4.0",
     "gulp-plumber": "^1.1.0",
     "gulp-util": "^3.0.7",
-    "mocha": "^3.1.2",
-    "promisify-node": "^0.4.0"
+    "mocha": "^3.1.2"
   }
 }
